fixed omg alignment when linked

--- a/css/bd-portfolio.css
+++ b/css/bd-portfolio.css
@@ -44,6 +44,10 @@
   background: #111;
   text-align: center;
 }
+#bdp-slider ul li a img {
+  display: table-cell;
+  vertical-align: middle;
+}
 #bdp-overlay-info {
   position:absolute;
   background-color: #222;
@@ -89,6 +93,9 @@ a.title-active {
   height:auto;
   margin: 0 auto;
 }
+a.bdp-image-slide img {
+  vertical-align: middle;
+}
 .bdp-text-slide {
   margin: 0 auto;
   overflow-y: scroll;
@@ -122,7 +129,16 @@ width: 100%;
 .bdp-yt-thumb {
   width:100%;
 }
-div.play-button { height: 72px; width: 72px; left: 50%; top: 33%; margin-left: -36px; margin-top: -36px; position: absolute; background: url("http://i.imgur.com/TxzC70f.png") no-repeat; }
+div.play-button {
+  height: 72px;
+  width: 72px;
+  left: 50%;
+  top: 33%;
+  margin-left: -36px;
+  margin-top: -36px;
+  position: absolute;
+  background: url("http://i.imgur.com/TxzC70f.png") no-repeat;
+}
 
 /* Portfolio navigation */
 
